Fix floater z-index + input and textarea fixes (#260)

--- a/@stellar/design-system/src/components/Floater/styles.scss
+++ b/@stellar/design-system/src/components/Floater/styles.scss
@@ -50,6 +50,8 @@
 
   // Floater open/close
   &.trigger {
+    z-index: 2;
+
     .Floater__content {
       display: block;
     }
